--- a/Job Seekers/job-page.html
+++ b/Job Seekers/job-page.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+    <div class="loader-container">
+        <div class="loader"></div>
+      </div>
+
     <div class="top-pane">
         <div>
             <h2>BusYan</h2>
@@ -26,20 +30,11 @@
     <hr style="margin: 0px 20px 50px 20px">
 
     <div style="display: flex; justify-content: center;">
-        <input id="searchInput" type="text" class="search-bar" placeholder="Search" />
+        <input id="searchJobsInput" type="text" class="search-bar" placeholder="Search" />
     </div>
 
     <h5 style="margin-left: 10px;">Recommended job for you</h5>
     <div class="job-container">
-        <div class="job-card">
-            <div style="display: flex; justify-content: space-between; flex-direction: row;">
-                <h5>Bus Conductor Hiring</h5>
-                <i class="fa-solid fa-bookmark" style="margin-right: 10px;"></i>
-            </div>
-            <h6>Pitam</h6>
-            <h5><i class="fa-solid fa-location-dot"></i>Mandaue, Cebu City</h5>
-            <p>PHP 10,000 - 15,000</p><span>26-Apr-2024</span>
-        </div>
     </div>
 
     <!-- Modal content -->
@@ -105,7 +100,7 @@
                 <span class="applyJobModalCloseBtn" style="cursor: pointer;">&times;</span>
             </div>
             <hr style="height: 2px; background-color: gray;">
-            <h3 id="jobType" style="width: 100%; text-align: center; margin-bottom: 50px;">Bus Job</h3>
+            <h3 id="jobType2" style="width: 100%; text-align: center; margin-bottom: 50px;">Bus Job</h3>
             <div class="apply-job-main-info">
                 <div class="apply-job-main-info-left">
                     <h5 id="myName">Loading...</h5>
@@ -133,7 +128,7 @@
                         style="background-color: whitesmoke; display: flex; justify-content: space-between; flex-direction: column;">
                         <h6>Resume/Bio Data from the applicant</h6>
                         <img id="resumePhoto" src="./images/placeholder.png" alt="files">
-                        <input type="file" required>
+                        <input id="resumePhotoBtn" type="file" required>
                     </div>
                 </div>
 
@@ -141,11 +136,11 @@
                     <div class="column" style="background-color: whitesmoke;">
                         <h4>Work Experience</h4>
                         <select name="workExperienceSelect" id="workExperienceSelect">
-                            <option value="">No Work Experience</option>
-                            <option value="">Below 5 years</option>
-                            <option value="">6-11 years</option>
-                            <option value="">12-17 years</option>
-                            <option value="">18-23 years</option>
+                            <option value="nwe">No Work Experience</option>
+                            <option value="bf">Below 5 years</option>
+                            <option value="6to11">6-11 years</option>
+                            <option value="12to17">12-17 years</option>
+                            <option value="18to23">18-23 years</option>
                         </select>
                     </div>
 
@@ -165,7 +160,7 @@
                         style="background-color: whitesmoke; display: flex; justify-content: space-between; flex-direction: column;">
                         <h4>Drivers License</h4>
                         <img id="licensePhoto" src="./images/placeholder.png" alt="files">
-                        <input type="file" required>
+                        <input id="licensePhotoBtn" type="file" required>
                     </div>
                 </div>
 
@@ -187,6 +182,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js "></script>
     <script src="./js/job-page.js" type="module"></script>
+    <script src="./js/home.js" type="module"></script>
 </body>
 
 </html>
