add about us and help center page

--- a/Job Seekers/about-us.html
+++ b/Job Seekers/about-us.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notification</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="./css/notificaiton.css" />
     <link rel="stylesheet" href="./../common.css" />
@@ -45,8 +45,9 @@
 
     <hr style="margin: 0px 20px 50px 20px">
 
-    <div style="display: flex; justify-content: center;">
-        <h2>Notifications</h2>
+    <div style="display: flex; justify-content: center; flex-direction: column; text-align: center;">
+        <h2 style="margin-bottom: 50px;">About Us</h2>
+        <article>BusYan is about bus tracking and job searching.</article>
     </div>   
 
     <ul class="notif-ul">
@@ -55,8 +56,6 @@
 
     <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js "></script>
     <script src="./js/home.js" type="module"></script>
-    <script src="./js/notification.js" type="module"></script>
-
 </body>
 
 </html>
