--- a/Job Seekers/job-page.html
+++ b/Job Seekers/job-page.html
@@ -18,7 +18,7 @@
 
     <div class="top-pane">
         <div>
-            <h2>BusYan</h2>
+            <h2><span class="logo">BY</span>BusYan</h2>
         </div>
         <div class="menu-icon">
             <a href="#"><i class="fa-solid fa-house"></i></a>
