--- a/Job Seekers/saved-job.html
+++ b/Job Seekers/saved-job.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notification</title>
+    <title>Saved Jobs</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="./css/notificaiton.css" />
     <link rel="stylesheet" href="./css/job_page.css" />
@@ -15,7 +15,7 @@
 <body>
     <div class="top-pane">
         <div>
-            <h2>BusYan</h2>
+            <h2><span class="logo">BY</span>BusYan</h2>
         </div>
         <div class="menu-icon">
             
